FIX (Content halves) Fix table on mobile view
Table was messy on mobile view.

--- a/src/patterns/content-halves/_content-halves.scss
+++ b/src/patterns/content-halves/_content-halves.scss
@@ -22,11 +22,11 @@ section.sta-grey-light {
 	vertical-align: top;
 }
 
-@media (max-width: 600px) {
-	.course table {
-		table-layout: auto;
-	}
-}
+// @media (max-width: 600px) {
+// 	.course table {
+// 		table-layout: auto;
+// 	}
+// }
 /*********************************/
 /* END Pattern: content-halves   */
 /*********************************/
